--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -304,8 +304,8 @@ jobs:
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           
-          # Clone homebrew-tap repository
-          git clone https://github.com/${{ github.repository_owner }}/homebrew-tap.git
+          # Clone homebrew-tap repository with token
+          git clone https://x-access-token:${{ secrets.HOMEBREW_TAP_TOKEN }}@github.com/${{ github.repository_owner }}/homebrew-tap.git
           cd homebrew-tap
           
           # Update formula with new checksums
@@ -323,16 +323,14 @@ jobs:
           git add Formula/b58uuid.rb
           git commit -m "Update b58uuid to v${VERSION}"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
 
       - name: Update Scoop bucket
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           
-          # Clone scoop-bucket repository
-          git clone https://github.com/${{ github.repository_owner }}/scoop-bucket.git
+          # Clone scoop-bucket repository with token
+          git clone https://x-access-token:${{ secrets.SCOOP_BUCKET_TOKEN }}@github.com/${{ github.repository_owner }}/scoop-bucket.git
           cd scoop-bucket
           
           # Update manifest
@@ -360,5 +358,3 @@ jobs:
           git add b58uuid.json
           git commit -m "Update b58uuid to v${VERSION}"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.SCOOP_BUCKET_TOKEN }}
