--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,27 +15,25 @@ jobs:
     strategy:
       matrix:
         include:
-          # Linux
+          # Linux x86_64
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: b58uuid
             asset_name: b58uuid-linux-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            artifact_name: b58uuid
-            asset_name: b58uuid-linux-arm64
           
-          # macOS
+          # macOS x86_64
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: b58uuid
             asset_name: b58uuid-darwin-amd64
+          
+          # macOS ARM64
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_name: b58uuid
             asset_name: b58uuid-darwin-arm64
           
-          # Windows
+          # Windows x86_64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: b58uuid.exe
@@ -49,12 +47,6 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
-
-      - name: Install cross-compilation tools
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
