Fix Homebrew formula auto-update - use template instead of sed
- Replace sed-based updates with complete formula template
- Ensures correct checksum placement for all platforms
- Fixes ARM64 macOS checksum mismatch issue
- More reliable and maintainable approach

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -302,14 +302,51 @@ jobs:
           git clone https://x-access-token:${{ secrets.HOMEBREW_TAP_TOKEN }}@github.com/${{ github.repository_owner }}/homebrew-tap.git
           cd homebrew-tap
           
-          # Update formula with new checksums
-          sed -i "s/version \".*\"/version \"${VERSION}\"/" Formula/b58uuid.rb
-          sed -i "s|url \".*darwin-amd64.tar.gz\"|url \"https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-darwin-amd64.tar.gz\"|" Formula/b58uuid.rb
-          sed -i "s|url \".*darwin-arm64.tar.gz\"|url \"https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-darwin-arm64.tar.gz\"|" Formula/b58uuid.rb
-          sed -i "s|url \".*linux-amd64.tar.gz\"|url \"https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-linux-amd64.tar.gz\"|" Formula/b58uuid.rb
-          sed -i "0,/sha256 \".*\"/s//sha256 \"${{ steps.checksums.outputs.darwin_amd64 }}\"/" Formula/b58uuid.rb
-          sed -i "0,/sha256 \".*\"/s//sha256 \"${{ steps.checksums.outputs.darwin_arm64 }}\"/" Formula/b58uuid.rb
-          sed -i "0,/sha256 \".*\"/s//sha256 \"${{ steps.checksums.outputs.linux_amd64 }}\"/" Formula/b58uuid.rb
+          # Create updated formula
+          cat > Formula/b58uuid.rb << EOF
+          class B58uuid < Formula
+            desc "Compact Base58 UUID Encoder CLI"
+            homepage "https://b58uuid.io"
+            version "${VERSION}"
+            license "MIT"
+            
+            on_macos do
+              if Hardware::CPU.arm?
+                url "https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-darwin-arm64.tar.gz"
+                sha256 "${{ steps.checksums.outputs.darwin_arm64 }}"
+              else
+                url "https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-darwin-amd64.tar.gz"
+                sha256 "${{ steps.checksums.outputs.darwin_amd64 }}"
+              end
+            end
+
+            on_linux do
+              url "https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-linux-amd64.tar.gz"
+              sha256 "${{ steps.checksums.outputs.linux_amd64 }}"
+            end
+
+            def install
+              bin.install "b58uuid"
+            end
+
+            test do
+              system "#{bin}/b58uuid", "--version"
+              assert_match "b58uuid ${VERSION}", shell_output("#{bin}/b58uuid --version")
+              
+              # Test encode
+              output = shell_output("#{bin}/b58uuid encode 550e8400-e29b-41d4-a716-446655440000")
+              assert_match "BWBeN28Vb7cMEx7Ym8AUzs", output
+              
+              # Test decode
+              output = shell_output("#{bin}/b58uuid decode BWBeN28Vb7cMEx7Ym8AUzs")
+              assert_match "550e8400-e29b-41d4-a716-446655440000", output
+              
+              # Test generate (should output 22 characters)
+              output = shell_output("#{bin}/b58uuid generate")
+              assert_match /^[A-HJ-NP-Za-km-z1-9]{22}$/, output.strip
+            end
+          end
+          EOF
           
           # Commit and push
           git config user.name "github-actions[bot]"
