--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,9 +73,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.asset_name }}
-          path: |
-            ${{ matrix.asset_name }}.tar.gz
-            ${{ matrix.asset_name }}.zip
+          path: ${{ matrix.asset_name }}.*
 
   release:
     name: Create Release
@@ -90,10 +88,16 @@ jobs:
         with:
           path: artifacts
 
+      - name: Prepare release files
+        run: |
+          mkdir -p release-files
+          find artifacts -type f \( -name "*.tar.gz" -o -name "*.zip" \) -exec cp {} release-files/ \;
+          ls -lh release-files/
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/**/*
+          files: release-files/*
           body_path: CHANGELOG.md
           draft: false
           prerelease: false
@@ -275,6 +279,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Wait for release assets to be available
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "Waiting for release assets to be available..."
+          sleep 30
+          
+          # Verify all assets exist and are not empty
+          for asset in b58uuid-darwin-amd64.tar.gz b58uuid-darwin-arm64.tar.gz b58uuid-linux-amd64.tar.gz b58uuid-windows-amd64.zip; do
+            echo "Checking $asset..."
+            for i in {1..10}; do
+              SIZE=$(curl -sI "https://github.com/${{ github.repository }}/releases/download/v${VERSION}/${asset}" | grep -i content-length | awk '{print $2}' | tr -d '\r')
+              if [ "$SIZE" -gt 1000 ]; then
+                echo "✓ $asset is available (${SIZE} bytes)"
+                break
+              fi
+              echo "  Waiting for $asset... (attempt $i/10)"
+              sleep 10
+            done
+          done
+
       - name: Download release assets
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
@@ -284,6 +308,9 @@ jobs:
           curl -LO https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-darwin-arm64.tar.gz
           curl -LO https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-linux-amd64.tar.gz
           curl -LO https://github.com/${{ github.repository }}/releases/download/v${VERSION}/b58uuid-windows-amd64.zip
+          
+          # Verify downloads
+          ls -lh *.tar.gz *.zip
 
       - name: Calculate checksums
         id: checksums
@@ -292,6 +319,13 @@ jobs:
           echo "darwin_arm64=$(shasum -a 256 b58uuid-darwin-arm64.tar.gz | awk '{print $1}')" >> $GITHUB_OUTPUT
           echo "linux_amd64=$(shasum -a 256 b58uuid-linux-amd64.tar.gz | awk '{print $1}')" >> $GITHUB_OUTPUT
           echo "windows_amd64=$(shasum -a 256 b58uuid-windows-amd64.zip | awk '{print $1}')" >> $GITHUB_OUTPUT
+          
+          # Display checksums for verification
+          echo "Checksums:"
+          echo "  darwin_amd64: $(shasum -a 256 b58uuid-darwin-amd64.tar.gz | awk '{print $1}')"
+          echo "  darwin_arm64: $(shasum -a 256 b58uuid-darwin-arm64.tar.gz | awk '{print $1}')"
+          echo "  linux_amd64: $(shasum -a 256 b58uuid-linux-amd64.tar.gz | awk '{print $1}')"
+          echo "  windows_amd64: $(shasum -a 256 b58uuid-windows-amd64.zip | awk '{print $1}')"
 
       - name: Update Homebrew tap
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
